--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="th.o.th">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CodeGenerator"
         tools:targetApi="31">
+        <activity
+            android:name=".morseCode"
+            android:exported="false" />
         <activity
             android:name=".qrCode"
             android:exported="false"
